<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="Hire Now!"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="share ride"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.588" />

    <EditText
        android:id="@+id/phoneHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toTopOf="@+id/passHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toTopOf="@+id/buttonHomeLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="381dp"
        android:layout_height="212dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rickshaw" />

    <Button
        android:id="@+id/buttonHomeLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/buttonHomeRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHomeRegister"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="27dp"
        android:text="@string/not_registered_yet_register_here"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>